rename total
